# capabilities

./: Cargo.toml  README.md
capabilities-derive/: Cargo.toml
capabilities-derive/src/: helpers.rs  lib.rs  macros.rs
capabilities-proc-macro/: Cargo.toml
capabilities-proc-macro/src/: lib.rs
src/: cap_http.rs  lib.rs
tests/: cap.rs  cap_del_structs.rs  cap_structs.rs  cap_stucts.rs  cap_tests.rs  req.rs  service.rs  svc.rs  svc_cap.rs  svc_cap_delete.rs  svc_cap_readall.rs  svc_cap_updateall.rs  svc_clone.rs
tests/fail/: cap.rs  cap.stderr  cap_struct.rs  cap_struct.stderr  cap_struct_missing_read.rs  cap_struct_missing_read.stderr  capability_fn_missing_struct.rs  capability_fn_missing_struct.stderr  database.stderr  service_fn.rs  service_fn.stderr  service_struct.rs  service_struct.stderr
tests/pass/: cap_del_structs.rs  database.rs  read.rs  service_db.rs  service_web.rs  svc_cap_create.rs  svc_cap_delete.rs  svc_cap_deleteall.rs  svc_cap_read.rs  svc_cap_readall.rs  svc_cap_update.rs  svc_cap_updateall.rs
