[package]
name = "capabilities"
version = "0.1.0"
edition = "2021"
description = "A proc macro for capability design"
readme = "README.md"
keywords = ["capabilities"]
categories = ["software design"]
homepage = "https://github.com/spydx/capabilities"
repository = "https://github.com/spydx/capabilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/cap_tests.rs"

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full"] }
proc-macro2 = "1.0.32"
async-trait = "0.1.51"
reqwest = "0.11.6"
sqlx = { version = "0.5.9", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres"] }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full"] }
trybuild = "1.0.52"

[dependencies.capabilities-derive]
version = "0.1.0"
path = "capabilities-derive"
package = "capabilities-derive"

[workspace]
members = ["capabilities-derive"]
