[package]
name = "capabilities"
version = "0.1.0"
edition = "2021"
description = "A proc macro for capability design"
readme = "README.md"
keywords = ["capabilities"]
categories = ["software design"]
homepage = "https://github.com/spydx/capabilities"
repository = "https://github.com/spydx/capabilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/cap_tests.rs"

[dependencies]
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
proc-macro2 = "1.0.36"
async-trait = "0.1.52"
reqwest = "0.11.9"
sqlx = { version = "0.5.10", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres"] }
actix-web = "3.3.3"
actix-web-httpauth = "0.5.1"
jsonwebtoken = "8.0.1"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }
trybuild = "1.0.56"

[dependencies.capabilities-derive]
version = "0.1.0"
path = "capabilities-derive"
package = "capabilities-derive"

#[workspace]
#members = ["capabilities-derive"]
