[package]
name = "capabilities-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
proc-macro2 = "1.0.36"
async-trait = "0.1.52"
darling = "0.13.1"
sqlx = { version = "0.5.11", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres"] }
